Fixed the horizontal scrollbar issue + category label positioning

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -52,7 +52,10 @@
 	font-size: 14px;
 	opacity: 0.6;
 	font-stretch: normal;
-	padding-left: 15px;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
+}
+
+.infinite-scroll-component {
+	overflow-x: hidden !important;
 }
